# bistring

./: .gitattributes  .gitignore  .readthedocs.yml  Makefile  README.md  README.rst  azure-pipelines.yml  bistring.js  demo.browser.js  demo.css  demo.html  demo.js  package-lock.json  package.json  rollup.config.js
.github/workflows/: ci.yml  codeql.yml
docs/: .gitignore  Alignment.rst  BistrBuilder.rst  FAQ.rst  Introduction.rst  Makefile  Pipfile  Tokenization.rst  Tokenizer.rst  conf.py  environment.yml  index.rst  package-lock.json  package.json  requirements.txt
docs/JavaScript/: Alignment.rst  BiString.rst  BiStringBuilder.rst  Tokenization.rst  Tokenizer.rst  index.rst
docs/Python/: Alignment.rst  BistrBuilder.rst  Tokenization.rst  Tokenizer.rst  bistr.rst  index.rst
js/: .gitignore  Makefile  README.md  README.rst  package-lock.json  package.json  rollup.config.js  rollup.config.mjs  tsconfig.json
js/scripts/: generate_unicode.py
js/src/: alignment.ts  bistring.ts  builder.ts  index.ts  infer.ts  regex.ts  token.ts  unicode.ts
js/tests/: alignment.test.ts  bistring.test.ts  builder.test.ts  token.test.ts
python/: Makefile  Pipfile  README.rst  mypy.ini  setup.py
python/bistring/: __init__.py  _alignment.py  _bistr.py  _builder.py  _icu.py  _infer.py  _regex.py  _token.py  _typing.py
python/stubs/: icu.pyi
python/tests/: test_alignment.py  test_bistr.py  test_builder.py  test_token.py
rust/: Cargo.toml  Makefile  README.md
rust/src/: align.rs  bound.rs  lib.rs  owned.rs  slice.rs
